cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@namespaced_entities.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/namespaced_entities.cedarschema
---
namespace MyApp {
  entity User = {
    name: __cedar::String
  };

  action "view" appliesTo {
    principal: [MyApp::User],
    resource: [MyApp::User],
    context: {}
  };
}
