cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__roundtrip_schemas@shadowed_entity_and_common.cedarschema.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
input_file: cedar-policy/src/ffi/test_schemas/shadowed_entity_and_common.cedarschema
---
entity Address = {
  e_city: __cedar::String,
  e_street: __cedar::String,
  e_zipcode: __cedar::String
};

entity User = {
  active: __cedar::Bool,
  address: {
    city: __cedar::String,
    street: __cedar::String,
    zipcode: __cedar::String
  }
};

action "updateContact" appliesTo {
  principal: [User],
  resource: [User],
  context: {
    addy: {
      city: __cedar::String,
      street: __cedar::String,
      zipcode: __cedar::String
    }
  }
};
